final for experiment 2 - versions

--- a/example_site/templates/index.html
+++ b/example_site/templates/index.html
@@ -47,7 +47,7 @@
       <center><b style="font-size: 24px;">California Consumer Privacy Opt-Out provision (Act)</b></center>
       <p>By submitting this request you are exercising your right to Opt Out of sale of your personal information. To learn more about what kinds of information we gather in connection with this website and/or its associated services, please consult our <a target="_blank" href="/privacypolicy/" class = "link_in_text" onclick="logBeacon('click', 'link_privacy_policy')">Privacy Policy</a></p>
       <label for="fname">Email:</label>
-      <input type="text" id="fname" name="fname" value=""><br>
+      <input id="form_input" type="text" id="fname" name="fname" value=""><br>
       <br>
       <label for="yes_no_radio">Are you a California resident?</label>
       <p> <input style="font-size: 12px;" type="radio" name="yes_no">Yes</input></p>
