--- a/example_site/templates/index.html
+++ b/example_site/templates/index.html
@@ -45,14 +45,14 @@
     <div id= "form" class="cookie-banner-container" style="z-index: 1000;">
       <span class="close" onclick= "myClose(), logEvent('click', 'button_x_form');"> ✕ </span>
       <center><b style="font-size: 24px;">California Consumer Privacy Opt-Out provision (Act)</b></center>
-      <p>By submitting this request you are exercising your right to Opt Out of sale of your personal information. To learn more about what kinds of information we gather in connection with this website and/or its associated services, please consult our <a target="_blank" href="/privacypolicy/" class = "link_in_text" onclick="logBeacon('click', 'link_privacy_policy')">Privacy Policy</a></p>
+      <p>By submitting this request you are exercising your right to Opt Out of sale of your personal information. To learn more about what kinds of information we gather in connection with this website and/or its associated services, please consult our <a target="_blank" href="/privacypolicy/" class = "link_in_text" onclick="logBeacon('click', 'form_privacy_policy')">Privacy Policy</a></p>
       <label for="fname">Email:</label>
-      <input id="form_input" type="text" id="fname" name="fname" value=""><br>
+      <input type="text" id="form_input" name="fname" value=""><br>
       <br>
       <label for="yes_no_radio">Are you a California resident?</label>
       <p> <input style="font-size: 12px;" type="radio" name="yes_no" value="ca_resident_yes">Yes</input></p>
       <p><input style="font-size: 12px;" type="radio" name="yes_no" value="ca_resident_no">No</input></p>
-      <center><button style="display:block" type="button" onclick="myClose(), logEvent('click', 'submit_form'), logEvent('form_input', checkValidEmail(document.getElementById('fname').value)), logEvent('form_input', getRadioInput('yes_no'));">
+      <center><button style="display:block" type="button" onclick="myClose(), logEvent('click', 'submit_form'), logEvent('form_input', checkValidEmail(document.getElementById('form_input').value)), logEvent('form_input', getRadioInput('yes_no'));">
         Submit response
       </button>
       </center>
@@ -60,7 +60,7 @@
     <div id="toggle" class="cookie-banner-container" style="z-index: 1000;">
       <span class="close" onclick="myClose(), logEvent('click', 'button_x_toggle');"> ✕ </span>
       <p id="text">
-        California residents have certain rights with regard to the sale of personal information to third parties. We use information collected through cookies or in other forms to improve experience on our site and pages, analyze how it is used and show personalized advertising. You can opt out of the sale of your personal information for each purpose through the toggles below.  You can find out more in our privacy policy at the bottom of any page.
+        California residents have certain rights with regard to the sale of personal information to third parties. We use information collected through cookies or in other forms to improve experience on our site and pages, show personalized advertising, and connect to social media. You can opt out of the sale of your personal information for each purpose through changing its corresponding toggle to the left.  You can find out more in our privacy policy at the bottom of any page.
       </p>
       <table>
         <tr>
