--- a/example_site/templates/index.html
+++ b/example_site/templates/index.html
@@ -121,10 +121,11 @@
     </div>
     <div id="link_text" class="cookie-banner-container">
       <span class="close" onclick="myClose(), logEvent('click', 'button_x');"> ✕ </span><center>
-        California residents have certain rights with regard to the sale of personal information to third parties. You can find out more in our privacy policy at the bottom of any page. We use information collected through cookies or in other forms to improve experience on our site and pages, analyze how it is used and show personalized advertising.  At any point, you can opt out of the sale of all of your personal information by pressing <a id="link_in_text" class="policy" style="text-decoration: underline;"onclick="myToggle(), logEvent('click', 'button_do_not_sell');">Do Not Sell My Information</a>.
+        California Residents have certain rights with regard to the sale of personal information to third parties.  We use information collected through cookies or in other forms to improve experience on our site and pages, show personalized advertising, and connect to social media. <a id="link_in_text" class="policy" style="text-decoration: underline;"onclick="myToggle(), logEvent('click', 'button_do_not_sell');">More Information</a>
       <button style="display:block" type="button" onclick="myClose(), logEvent('click', 'button_accept_cookies');">
         Accept Cookies
       </button></center>
+    </div>
       <div id="mobile_button_and_link" class="cookie-banner-container"><center>
         <span class="close" onclick="myClose(), logEvent('click', 'button_x');"> ✕ </span>
           <p id="text" style="font-size:12px;">
